--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -7,6 +7,7 @@
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css"> 
+	<link rel="stylesheet" href="css/reset.css">
 
   	
 	<title>We</title>
