--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -18,11 +18,11 @@
 		<div class="opcoes">
 				<img id="hamburguer" src="hamburguer.png" alt="">
 				<div id="barra">
-					<a href="#section1" class="active"><span class="label">Home</span></a>
-					<a href="#section2"><span class="label">Sobre</span></a>
-					<a href="#section3"><span class="label">Cadastro</span></a>
-					<a href="#section4"><span class="label">Recentes</span></a>
-					<a href="#section5"><span class="label">Contato</span></a>
+					<a onclick="none()" href="#section1" class="active"><span class="label">Home</span></a>
+					<a onclick="none()" href="#section2"><span class="label">Sobre</span></a>
+					<a onclick="none()" href="#section3"><span class="label">Cadastro</span></a>
+					<a onclick="none()" href="#section4"><span class="label">Recentes</span></a>
+					<a onclick="none()"  href="#section5"><span class="label">Contato</span></a>
 				</div>
 			</div>
 <nav class="cd-vertical-nav">
