Detalhes do CSS

--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -42,7 +42,7 @@
 <section id="section2" class="cd-section">
 		<div id="mae"> 
 		<div id="filha1">
-				<img id="imagem1" class="img-responsive" src="1.jpg" alt="Girl in a jacket" >
+				<img id="imagem1" class="img-responsive" src="pudim-01.jpg" alt="Girl in a jacket" >
 				   <span> <h2 id="text1"> Sobre </h2>
 					<p id="informacao1"> Lorem, ipsum dor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt perferendis, voluptates doloremque everatione, deleniti eum quod  </p> </span>
 			</div>
@@ -52,7 +52,7 @@
 					<span><h2 id="text1"> Como funciona </h2>
 					<p id="informacao2"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt perferendis, voluptates doloremque eveniet consequuntur distinctio velit quisquam, non similique sapiente,
 						  corporis tempora. Enim odio repudiandae </p></span>
-						  <img id="imagem2" class="img-responsive " src="2.jpg"  alt="Girl in a jacket">
+						  <img id="imagem2" class="img-responsive " src="pudim3-01.jpg"  alt="Girl in a jacket">
 			  </div>
 			  </div>
 
