--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -8,11 +8,23 @@
 	<link href='https://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css"> 
 	<link rel="stylesheet" href="css/reset.css">
+	<script src="index.js" defer></script>
 
   	
 	<title>We</title>
 </head>
 <body>
+
+		<div class="opcoes">
+				<img id="hamburguer" src="hamburguer.png" alt="">
+				<div id="barra">
+					<a href="#section1" class="active"><span class="label">Home</span></a>
+					<a href="#section2"><span class="label">Sobre</span></a>
+					<a href="#section3"><span class="label">Cadastro</span></a>
+					<a href="#section4"><span class="label">Recentes</span></a>
+					<a href="#section5"><span class="label">Contato</span></a>
+				</div>
+			</div>
 <nav class="cd-vertical-nav">
 	<ul>
 		<li><a href="#section1" class="active"><span class="label">Home</span></a></li>
@@ -42,17 +54,17 @@
 <section id="section2" class="cd-section">
 		<div id="mae"> 
 		<div id="filha1">
-				<img id="imagem1" class="img-responsive" src="pudim-01.jpg" alt="Girl in a jacket" >
-				   <span> <h2 id="text1"> Sobre </h2>
-					<p id="informacao1"> Lorem, ipsum dor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt perferendis, voluptates doloremque everatione, deleniti eum quod  </p> </span>
+				<img id="imagem1" class="img-fluid" src="pudim-01.jpg" alt="Girl in a jacket" >
+				   <span> <h2 class="text1"> Sobre </h2>
+					<p class="informacao"> Lorem, ipsum dor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt perferendis, voluptates doloremque everatione, deleniti eum quod  </p> </span>
 			</div>
 
 			<div id="filha2">
             
-					<span><h2 id="text1"> Como funciona </h2>
-					<p id="informacao2"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt perferendis, voluptates doloremque eveniet consequuntur distinctio velit quisquam, non similique sapiente,
+					<span><h2 class="text1"> Como funciona </h2>
+					<p class="informacao"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt perferendis, voluptates doloremque eveniet consequuntur distinctio velit quisquam, non similique sapiente,
 						  corporis tempora. Enim odio repudiandae </p></span>
-						  <img id="imagem2" class="img-responsive " src="pudim3-01.jpg"  alt="Girl in a jacket">
+						  <img id="imagem2" class="img-fluid " src="pudim3-01.jpg"  alt="Girl in a jacket">
 			  </div>
 			  </div>
 
