--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -7,7 +7,6 @@
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css"> 
-	<link rel="stylesheet" href="css/reset.css">
 	<script src="index.js" defer></script>
 
   	
@@ -85,24 +84,36 @@
 <section id="section4" class="cd-section">
 	<div class="content">
 		<h2>Causas</h2>
-		<div class="flexslider carousel">
-			<ul class="slides">
-			  <li>
-				<img src="jpg" />
-			  </li>
-			  <li>
-				<img src="slide2.jpg" />
-			  </li>
-			  <li>
-				<img src="slide3.jpg" />
-			  </li>
-			  <li>
-				<img src="slide4.jpg" />
-			  </li>
-			  <!-- items mirrored twice, total of 12 -->
-			</ul>
-		  </div>
-	</div>
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img class="d-block w-100" src="imgs/banner2-01.jpg" alt="First slide">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>...</h5>
+						<p>...</p>
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+		</div>
 </section><!-- sessão das causas -->
 
 <section id="section5" class="cd-section">
@@ -118,6 +129,9 @@
 	<img src="whats.png" alt="">
 </footer>
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <!-- <script src="main.js"></script> -->
 </body>
 </html>
