--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -93,14 +93,20 @@
 			<div class="carousel-item active">
 				<img class="d-block w-100" src="imgs/banner2-01.jpg" alt="First slide">
 				<div class="carousel-caption d-none d-md-block">
-					<h5>...</h5>
+					<h5>Pudim</h5>
 					<p>...</p>
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="imgs/banner2-01.jpg" alt="Second slide">
+				<div class="carousel-caption d-none d-md-block">
+					<h5>...</h5>
+					<p>...</p>
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="imgs/banner2-01.jpg" alt="Third slide">
+				<div class="carousel-caption d-none d-md-block">
+					<h5>...</h5>
+					<p>...</p>
 			</div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
