add flex slider

--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -85,7 +85,23 @@
 <section id="section4" class="cd-section">
 	<div class="content">
 		<h2>Causas</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.</p>
+		<div class="flexslider carousel">
+			<ul class="slides">
+			  <li>
+				<img src="jpg" />
+			  </li>
+			  <li>
+				<img src="slide2.jpg" />
+			  </li>
+			  <li>
+				<img src="slide3.jpg" />
+			  </li>
+			  <li>
+				<img src="slide4.jpg" />
+			  </li>
+			  <!-- items mirrored twice, total of 12 -->
+			</ul>
+		  </div>
 	</div>
 </section><!-- sessão das causas -->
 
@@ -95,6 +111,12 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.</p>
 	</div>
 </section><!--contatinho -->
+<footer>
+	<img src="face.png" alt=""  > 
+	<img src="insta.png" alt="">
+	<img src="g+.png" alt="">
+	<img src="whats.png" alt="">
+</footer>
 
 <!-- <script src="main.js"></script> -->
 </body>
