--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -82,42 +82,53 @@
 </section><!-- Cadastro de novas ongs -->
 
 <section id="section4" class="cd-section">
-	
 	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 		<ol class="carousel-indicators">
-			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+		  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+		  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+		  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+		  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
 		</ol>
 		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img class="d-block w-100" src="imgs/banner2-01.jpg" alt="First slide">
-				<div class="carousel-caption d-none d-md-block">
-					<h5>Pudim</h5>
-					<p>...</p>
-			</div>
-			<div class="carousel-item">
-				<img class="d-block w-100" src="imgs/banner2-01.jpg" alt="Second slide">
-				<div class="carousel-caption d-none d-md-block">
-					<h5>...</h5>
-					<p>...</p>
-			</div>
-			<div class="carousel-item">
-				<img class="d-block w-100" src="imgs/banner2-01.jpg" alt="Third slide">
-				<div class="carousel-caption d-none d-md-block">
-					<h5>...</h5>
-					<p>...</p>
-			</div>
+		  <div class="carousel-item active">
+			<img class="d-block w-100" src="imgs/banner2-01.jpg" alt="First slide">
+			<div class="carousel-caption d-none d-md-block">
+				<h5>...</h5>
+				<p>...</p>
+			  </div>
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block w-100" src="imgs/banner2-01.jpg" alt="Second slide">
+			<div class="carousel-caption d-none d-md-block">
+				<h5>...</h5>
+				<p>...</p>
+			  </div>
+
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+			<div class="carousel-caption d-none d-md-block">
+				<h5>...</h5>
+				<p>...</p>
+			  </div>
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+			<div class="carousel-caption d-none d-md-block">
+				<h5>...</h5>
+				<p>...</p>
+			  </div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
+		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		  <span class="sr-only">Previous</span>
 		</a>
 		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
+		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		  <span class="sr-only">Next</span>
 		</a>
-	</div>
+	  </div>
+	
 </section><!-- sessão das causas -->
 
 <section id="section5" class="cd-section">
