--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -91,32 +91,32 @@
 		</ol>
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
-			<img class="d-block w-100" src="imgs/banner2-01.jpg" alt="First slide">
+			<img class="d-block w-100" src="dogo-01.png" alt="First slide">
 			<div class="carousel-caption d-none d-md-block">
-				<h5>...</h5>
-				<p>...</p>
+				<h2>PETS</h2>
+				<p>Ajude causas ligadas a Ongs de animais de estimação </p>
 			  </div>
 		  </div>
 		  <div class="carousel-item">
-			<img class="d-block w-100" src="imgs/banner2-01.jpg" alt="Second slide">
+			<img class="d-block w-100" src="idosos-01.png" alt="Second slide">
 			<div class="carousel-caption d-none d-md-block">
-				<h5>...</h5>
-				<p>...</p>
+				<h2>IDOSOS</h2>
+				<p>Ajude causas ligadas a idosos</p>
 			  </div>
 
 		  </div>
 		  <div class="carousel-item">
-			<img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+			<img class="d-block w-100" src="kidsk-01.png" alt="Third slide">
 			<div class="carousel-caption d-none d-md-block">
-				<h5>...</h5>
-				<p>...</p>
+				<h2>CRIANÇAS</h2>
+				<p>Ajude causas ligadas as crianças</p>
 			  </div>
 		  </div>
 		  <div class="carousel-item">
-			<img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+			<img class="d-block w-100" src="florest-01.png" alt="Third slide">
 			<div class="carousel-caption d-none d-md-block">
-				<h5>...</h5>
-				<p>...</p>
+				<h2>NATUREZA</h2>
+				<p>Ajude causas ligadas a natureza</p>
 			  </div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
