--- a/Nova pasta/index2.html
+++ b/Nova pasta/index2.html
@@ -51,7 +51,17 @@
 </section><!-- pesquisa ongs -->
 
 <section id="section2" class="cd-section">
-		<div id="mae"> 
+		<div class="content">
+				<img src="florest-01.png" class="rounded float-left" alt="...">
+				<h2>SOBRE</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.</p>
+			</div>
+			<div class="content">
+					<img src="florest-01.png" class="rounded float-right" alt="...">
+					<h2>COMO FUNCIONA</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.</p>
+				</div>
+		<!-- <div id="mae"> 
 		<div id="filha1">
 				<img id="imagem1" class="img-fluid" src="pudim-01.jpg" alt="Girl in a jacket" >
 				   <span> <h2 class="text1"> Sobre </h2>
@@ -65,7 +75,7 @@
 						  corporis tempora. Enim odio repudiandae </p></span>
 						  <img id="imagem2" class="img-fluid " src="pudim3-01.jpg"  alt="Girl in a jacket">
 			  </div>
-			  </div>
+			  </div> -->
 
 
 	<!-- <div class="content">
@@ -75,7 +85,12 @@
 </section><!-- Sobre -->
 
 <section id="section3" class="cd-section">
-	<div class="content">
+		<div class="content">
+				<h2>Vantagens</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.</p>
+			</div>
+			
+	<!-- <div class="content">
 		<h1 id="cadastro">Cadastro de Ongs</h1>
 		<form class="needs-validation" novalidate>
 			<div class="form-row">
@@ -131,7 +146,7 @@
 			</div>
 			<button class="btn btn-primary" type="submit">Submit form</button>
 		  </form>
-				
+				 -->
 
 		
 	</div>
@@ -149,30 +164,30 @@
 		  <div class="carousel-item active">
 			<img class="d-block w-100" src="dogo-01.png" alt="First slide">
 			<div class="carousel-caption d-none d-md-block">
-				<h2>PETS</h2>
-				<p>Ajude causas ligadas a Ongs de animais de estimação </p>
+				<h1 class="carouseltitle">PETS</h1>
+				<p class="carousel">Ajude causas ligadas a Ongs de animais de estimação </p>
 			  </div>
 		  </div>
 		  <div class="carousel-item">
 			<img class="d-block w-100" src="idosos-01.png" alt="Second slide">
 			<div class="carousel-caption d-none d-md-block">
-				<h2>IDOSOS</h2>
-				<p>Ajude causas ligadas a idosos</p>
+				<h1 class="carouseltitle">IDOSOS</h1>
+				<p class="carousel">Ajude causas ligadas a idosos</p>
 			  </div>
 
 		  </div>
 		  <div class="carousel-item">
 			<img class="d-block w-100" src="kidsk-01.png" alt="Third slide">
 			<div class="carousel-caption d-none d-md-block">
-				<h2>CRIANÇAS</h2>
-				<p>Ajude causas ligadas as crianças</p>
+				<h1 class="carouseltitle">CRIANÇAS</h1>
+				<p class="carousel">Ajude causas ligadas as crianças</p>
 			  </div>
 		  </div>
 		  <div class="carousel-item">
 			<img class="d-block w-100" src="florest-01.png" alt="Third slide">
 			<div class="carousel-caption d-none d-md-block">
-				<h2>NATUREZA</h2>
-				<p>Ajude causas ligadas a natureza</p>
+				<h2 class="carouseltitle">NATUREZA</h2>
+				<p class="carousel">Ajude causas ligadas a natureza</p>
 			  </div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
