--- a/Nova pasta/index2.html
+++ b/Nova pasta/index2.html
@@ -41,8 +41,8 @@
 	<section id="section1" class="cd-section">
 		<div class="content">
 			<h1 id="titulo-pag">Um clique pode ajudar milhares de causas urgentes<b></b></h1>
-			<a href="empresas.html" type="button" class="btn btn-primary btn-lg">Cadastro de empresas</a>
-			<a href="ong.html" type="button" class="btn btn-secondary btn-lg">Cadastro de Ongs</a>
+			<a type="button" class="btn btn-primary btn-lg">Cadastro de empresas</a>
+			<button type="button" class="btn btn-secondary btn-lg">Cadastro de Ongs</button>
 
 			<a href="#section2" class="cd-scroll-down cd-image-replace">scroll down</a>
 		</div>
@@ -86,23 +86,14 @@
 	</section><!-- Sobre -->
 
 	<section id="section3" class="cd-section">
-		<div id="sobre">
-			<div class="content">
-				<h2>Vantagens</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum
-					perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur,
-					id
-					cum.</p>
+		<div class="content">
+			<h2>Vantagens</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum
+				perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id
+				cum.</p>
+		</div>
 
-			</div>
-			<div class="itens">
-				<div class="item">
-	          <img id="it" src="./ongs lolobig.png" alt="">
-					</div>
-			</div>
-
-
-			<!-- <div class="content">
+		<!-- <div class="content">
 		<h1 id="cadastro">Cadastro de Ongs</h1>
 		<form class="needs-validation" novalidate>
 			<div class="form-row">
@@ -217,38 +208,9 @@
 	<section id="section5" class="cd-section">
 		<div class="content">
 			<h2>Contato</h2>
-			<div class="container">
-					<div class="row">
-							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">                        
-								
-							</div>
-					</div>
-					<div class="row">
-							<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-3">
-									<form id="contact-form" class="form" action="#" method="POST" role="form">
-											<div class="form-group">
-													<label class="form-label" for="name">Your Name</label>
-													<input type="text" class="form-control" id="name" name="name" placeholder="Your name" tabindex="1" required>
-											</div>                            
-											<div class="form-group">
-													<label class="form-label" for="email">Your Email</label>
-													<input type="email" class="form-control" id="email" name="email" placeholder="Your Email" tabindex="2" required>
-											</div>                            
-											<div class="form-group">
-													<label class="form-label" for="subject">Subject</label>
-													<input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" tabindex="3">
-											</div>                            
-											<div class="form-group">
-													<label class="form-label" for="message">Message</label>
-													<textarea rows="5" cols="50" name="message" class="form-control" id="message" placeholder="Message..." tabindex="4" required></textarea>                                 
-											</div>
-											<div class="text-center">
-													<button type="submit" class="btn btn-start-order">Send Message</button>
-											</div>
-									</form>
-							</div>
-					</div>
-				</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum
+				perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id
+				cum.</p>
 		</div>
 	</section>
 	<!--contatinho -->
