--- a/Nova pasta/index1.html
+++ b/Nova pasta/index1.html
@@ -23,7 +23,8 @@
 			<a onclick="none()" href="#section2"><span class="label">Sobre</span></a>
 			<a onclick="none()" href="#section3"><span class="label">Vantagens</span></a>
 			<a onclick="none()" href="#section4"><span class="label">Recentes</span></a>
-			<a onclick="none()" href="#section5"><span class="label">Contato</span></a>
+			<a onclick="none()" href="#section5"><span class="label">Empresas</span></a>
+			<a onclick="none()" href="#section6"><span class="label">Contato</span></a>
 		</div>
 	</div>
 	<nav class="cd-vertical-nav">
@@ -32,7 +33,8 @@
 			<li><a href="#section2"><span class="label">Sobre</span></a></li>
 			<li><a href="#section3"><span class="label">Vantagens</span></a></li>
 			<li><a href="#section4"><span class="label">Recentes</span></a></li>
-			<li><a href="#section5"><span class="label">Contato</span></a></li>
+			<li><a href="#section5"><span class="label">Empresas</span></a></li>
+			<li><a href="#section6"><span class="label">Contato</span></a></li>
 		</ul>
 	</nav><!-- menu vertical -->
 
@@ -213,8 +215,57 @@
 			</div>
 
 	</section><!-- sessão das causas -->
-
 	<section id="section5" class="cd-section">
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img class="d-block w-100" src="dogo-01.png" alt="First slide">
+						<div class="carousel-caption d-none d-md-block">
+							<h1 class="carouseltitle">PETS</h1>
+							<p class="carousel">Ajude causas ligadas a Ongs de animais de estimação </p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="idosos-01.png" alt="Second slide">
+						<div class="carousel-caption d-none d-md-block">
+							<h1 class="carouseltitle">IDOSOS</h1>
+							<p class="carousel">Ajude causas ligadas a idosos</p>
+						</div>
+	
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="kidsk-01.png" alt="Third slide">
+						<div class="carousel-caption d-none d-md-block">
+							<h1 class="carouseltitle">CRIANÇAS</h1>
+							<p class="carousel">Ajude causas ligadas as crianças</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="florest-01.png" alt="Third slide">
+						<div class="carousel-caption d-none d-md-block">
+							<h2 class="carouseltitle">NATUREZA</h2>
+							<p class="carousel">Ajude causas ligadas a natureza</p>
+						</div>
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+	
+		</section><!-- sessão das causas -->
+
+	<section id="section6" class="cd-section">
 		<div class="content">
 			<h2>Contato</h2>
 			<div class="container">
