--- a/Nova pasta/index1.html
+++ b/Nova pasta/index1.html
@@ -7,7 +7,10 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	 crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+ 
 	<link rel="stylesheet" href="css/style.css">
+	<!-- <link rel="stylesheet/less" type="text/css" href="styles.less" /> -->
 	<script src="index.js" defer></script>
 
 
@@ -216,53 +219,24 @@
 
 	</section><!-- sessão das causas -->
 	<section id="section5" class="cd-section">
-			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img class="d-block w-100" src="dogo-01.png" alt="First slide">
-						<div class="carousel-caption d-none d-md-block">
-							<h1 class="carouseltitle">PETS</h1>
-							<p class="carousel">Ajude causas ligadas a Ongs de animais de estimação </p>
+			<section class="client1">
+					<div class="container2">
+						<div class="raw">
+				
+							<div class="section-title">
+								<h2 id="company"> Empresas participantes </h2>
+							</div>
+							<div class="carousel-client">
+								<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo1.png"></div>
+								<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo2.png"></div>
+								<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo3.png"></div>
+								<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo1.png"></div>
+								<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo2.png"></div>
+								<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo3.png"></div>
+							</div>
 						</div>
 					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="idosos-01.png" alt="Second slide">
-						<div class="carousel-caption d-none d-md-block">
-							<h1 class="carouseltitle">IDOSOS</h1>
-							<p class="carousel">Ajude causas ligadas a idosos</p>
-						</div>
-	
-					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="kidsk-01.png" alt="Third slide">
-						<div class="carousel-caption d-none d-md-block">
-							<h1 class="carouseltitle">CRIANÇAS</h1>
-							<p class="carousel">Ajude causas ligadas as crianças</p>
-						</div>
-					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="florest-01.png" alt="Third slide">
-						<div class="carousel-caption d-none d-md-block">
-							<h2 class="carouseltitle">NATUREZA</h2>
-							<p class="carousel">Ajude causas ligadas a natureza</p>
-						</div>
-					</div>
-					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
-	
+				</section>
 		</section><!-- sessão das causas -->
 
 	<section id="section6" class="cd-section">
@@ -310,13 +284,16 @@
 		<img src="whats.png" alt="">
 	</footer>
 
+
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 	 crossorigin="anonymous"></script>
-	<script src="https://igorescobar.github.io/jQuery-Mask-Plugin/js/jquery.mask.min.js"></script>
+	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
 	 crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 	 crossorigin="anonymous"></script>
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 	<!-- <script src="main.js"></script> -->
 </body>
 
