--- a/Nova pasta/index1.html
+++ b/Nova pasta/index1.html
@@ -8,7 +8,7 @@
 	 crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
- 
+
 	<link rel="stylesheet" href="css/style.css">
 	<!-- <link rel="stylesheet/less" type="text/css" href="styles.less" /> -->
 	<script src="index.js" defer></script>
@@ -25,7 +25,7 @@
 			<a onclick="none()" href="#section1" class="active"><span class="label">Home</span></a>
 			<a onclick="none()" href="#section2"><span class="label">Sobre</span></a>
 			<a onclick="none()" href="#section3"><span class="label">Vantagens</span></a>
-			<a onclick="none()" href="#section4"><span class="label">Recentes</span></a>
+			<a onclick="none()" href="#section4"><span class="label">Causas</span></a>
 			<a onclick="none()" href="#section5"><span class="label">Empresas</span></a>
 			<a onclick="none()" href="#section6"><span class="label">Contato</span></a>
 		</div>
@@ -35,7 +35,7 @@
 			<li><a href="#section1" class="active"><span class="label">Home</span></a></li>
 			<li><a href="#section2"><span class="label">Sobre</span></a></li>
 			<li><a href="#section3"><span class="label">Vantagens</span></a></li>
-			<li><a href="#section4"><span class="label">Recentes</span></a></li>
+			<li><a href="#section4"><span class="label">Causas</span></a></li>
 			<li><a href="#section5"><span class="label">Empresas</span></a></li>
 			<li><a href="#section6"><span class="label">Contato</span></a></li>
 		</ul>
@@ -46,7 +46,7 @@
 	<section id="section1" class="cd-section">
 		<div class="content">
 			<h1 id="titulo-pag">Um clique pode ajudar milhares de causas urgentes<b></b></h1>
-			<a href="empresas.html" type="button" class="btn btn-primary btn-lg">Cadastro de empresas</a>
+			<a href="empresa.html" type="button" class="btn btn-primary btn-lg">Cadastro de empresas</a>
 			<a href="ong.html" type="button" class="btn btn-secondary btn-lg">Cadastro de Ongs</a>
 
 			<a href="#section2" class="cd-scroll-down cd-image-replace">scroll down</a>
@@ -102,8 +102,8 @@
 			</div>
 			<div class="itens">
 				<div class="item">
-	          <img id="it" src="./ongs lolobig.png" alt="">
-					</div>
+					<img id="it" src="./ongs lolobig.png" alt="">
+				</div>
 			</div>
 
 
@@ -219,61 +219,62 @@
 
 	</section><!-- sessão das causas -->
 	<section id="section5" class="cd-section">
-			<section class="client1">
-					<div class="container2">
-						<div class="raw">
-				
-							<div class="section-title">
-								<h2 id="company"> Empresas participantes </h2>
-							</div>
-							<div class="carousel-client">
-								<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo1.png"></div>
-								<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo2.png"></div>
-								<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo3.png"></div>
-								<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo1.png"></div>
-								<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo2.png"></div>
-								<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo3.png"></div>
-							</div>
-						</div>
+		<section class="client1">
+			<div class="container2">
+				<div class="raw">
+
+					<div class="section-title">
+						<h2 id="company"> Empresas participantes </h2>
 					</div>
-				</section>
-		</section><!-- sessão das causas -->
+					<div class="carousel-client">
+						<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo1.png"></div>
+						<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo2.png"></div>
+						<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo3.png"></div>
+						<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo1.png"></div>
+						<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo2.png"></div>
+						<div class="slide"><img src="https://www.grandvincent-marion.fr/_codepen/slider-logo3.png"></div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</section><!-- sessão das causas -->
 
 	<section id="section6" class="cd-section">
 		<div class="content">
 			<h2>Contato</h2>
 			<div class="container">
-					<div class="row">
-							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">                        
-								
-							</div>
-					</div>
-					<div class="row">
-							<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-3">
-									<form id="contact-form" class="form" action="#" method="POST" role="form">
-											<div class="form-group">
-													<label class="form-label" for="name">Your Name</label>
-													<input type="text" class="form-control" id="name" name="name" placeholder="Your name" tabindex="1" required>
-											</div>                            
-											<div class="form-group">
-													<label class="form-label" for="email">Your Email</label>
-													<input type="email" class="form-control" id="email" name="email" placeholder="Your Email" tabindex="2" required>
-											</div>                            
-											<div class="form-group">
-													<label class="form-label" for="subject">Subject</label>
-													<input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" tabindex="3">
-											</div>                            
-											<div class="form-group">
-													<label class="form-label" for="message">Message</label>
-													<textarea rows="5" cols="50" name="message" class="form-control" id="message" placeholder="Message..." tabindex="4" required></textarea>                                 
-											</div>
-											<div class="text-center">
-													<button type="submit" class="btn btn-start-order">Send Message</button>
-											</div>
-									</form>
-							</div>
+				<div class="row">
+					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+
 					</div>
 				</div>
+				<div class="row">
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-3">
+						<form id="contact-form" class="form" action="#" method="POST" role="form">
+							<div class="form-group">
+								<label class="form-label" for="name">Your Name</label>
+								<input type="text" class="form-control" id="name" name="name" placeholder="Your name" tabindex="1" required>
+							</div>
+							<div class="form-group">
+								<label class="form-label" for="email">Your Email</label>
+								<input type="email" class="form-control" id="email" name="email" placeholder="Your Email" tabindex="2" required>
+							</div>
+							<div class="form-group">
+								<label class="form-label" for="subject">Subject</label>
+								<input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" tabindex="3">
+							</div>
+							<div class="form-group">
+								<label class="form-label" for="message">Message</label>
+								<textarea rows="5" cols="50" name="message" class="form-control" id="message" placeholder="Message..." tabindex="4"
+								 required></textarea>
+							</div>
+							<div class="text-center">
+								<button type="submit" class="btn btn-start-order">Send Message</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 	<!--contatinho -->
@@ -287,13 +288,13 @@
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 	 crossorigin="anonymous"></script>
-	
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
 	 crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 	 crossorigin="anonymous"></script>
-	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 	<!-- <script src="main.js"></script> -->
 </body>
 
