criando pagina de cadastro

--- a/Nova pasta/index1.html
+++ b/Nova pasta/index1.html
@@ -284,6 +284,10 @@
 		<img src="g+.png" alt="">
 		<img src="whats.png" alt="">
 	</footer>
+	<!-- <a class="redes" href="www.facebook.com.br"><img src="face.png" alt=""></a>
+		<a class="redes" href="www.facebook.com.br"><img src="insta.png" alt=""></a>
+		<a class="redes" href="www.facebook.com.br"><img src="g+.png" alt=""></a>
+		<a class="redes" href="www.facebook.com.br"><img src="whats.png" alt=""></a> -->
 
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
