criando pagina de cadastro

--- a/Nova pasta/index1.html
+++ b/Nova pasta/index1.html
@@ -221,7 +221,7 @@
 	<section id="section5" class="cd-section">
 		<section class="client1">
 			<div class="container2">
-				<div class="raw">
+				<div class="row">
 
 					<div class="section-title">
 						<h2 id="company"> Empresas participantes </h2>
