tirar barra e rolagem

--- a/index1.html
+++ b/index1.html
@@ -252,19 +252,19 @@
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-3">
 						<form id="contact-form" class="form" action="#" method="POST" role="form">
 							<div class="form-group">
-								<label class="form-label" for="name">Seu Nome</label>
+								<label class="form-label" for="Nome">Seu Name</label>
 								<input type="text" class="form-control" id="name" name="name" placeholder="Seu nome" tabindex="1" required>
 							</div>
 							<div class="form-group">
-								<label class="form-label" for="email">Seu Email</label>
+								<label class="form-label" for="Email">Your Email</label>
 								<input type="email" class="form-control" id="email" name="email" placeholder="Seu email" tabindex="2" required>
 							</div>
 							<div class="form-group">
-								<label class="form-label" for="subject">Assunto</label>
+								<label class="form-label" for="Assunto">Subject</label>
 								<input type="text" class="form-control" id="subject" name="subject" placeholder="Assunto" tabindex="3">
 							</div>
 							<div class="form-group">
-								<label class="form-label" for="message">Messagem</label>
+								<label class="form-label" for="Mensagem">Message</label>
 								<textarea rows="5" cols="50" name="message" class="form-control" id="message" placeholder="Mensagem..." tabindex="4"
 								 required></textarea>
 							</div>
