--- a/index2.html
+++ b/index2.html
@@ -179,14 +179,14 @@
 			</ol>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img class="d-block w-100" src="dogo-01.png" alt="First slide">
+					<img class="d-block w-100" src="imgs/dogo-01.png" alt="First slide">
 					<div class="carousel-caption d-none d-md-block">
 						<h1 class="carouseltitle">PETS</h1>
 						<p class="carousel">Ajude causas ligadas a Ongs de animais de estimação </p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="idosos-01.png" alt="Second slide">
+					<img class="d-block w-100" src="imgs/idosos-01.png" alt="Second slide">
 					<div class="carousel-caption d-none d-md-block">
 						<h1 class="carouseltitle">IDOSOS</h1>
 						<p class="carousel">Ajude causas ligadas a idosos</p>
@@ -194,14 +194,14 @@
 
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="kidsk-01.png" alt="Third slide">
+					<img class="d-block w-100" src="imgs/kidsk-01.png" alt="Third slide">
 					<div class="carousel-caption d-none d-md-block">
 						<h1 class="carouseltitle">CRIANÇAS</h1>
 						<p class="carousel">Ajude causas ligadas as crianças</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="florest-01.png" alt="Third slide">
+					<img class="d-block w-100" src="imgs/florest-01.png" alt="Third slide">
 					<div class="carousel-caption d-none d-md-block">
 						<h2 class="carouseltitle">NATUREZA</h2>
 						<p class="carousel">Ajude causas ligadas a natureza</p>
@@ -252,19 +252,19 @@
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-3">
 						<form id="contact-form" class="form" action="#" method="POST" role="form">
 							<div class="form-group">
-								<label class="form-label" for="Nome">Seu Name</label>
+								<label class="form-label" for="name">Seu Nome</label>
 								<input type="text" class="form-control" id="name" name="name" placeholder="Seu nome" tabindex="1" required>
 							</div>
 							<div class="form-group">
-								<label class="form-label" for="Email">Your Email</label>
+								<label class="form-label" for="email">Seu Email</label>
 								<input type="email" class="form-control" id="email" name="email" placeholder="Seu email" tabindex="2" required>
 							</div>
 							<div class="form-group">
-								<label class="form-label" for="Assunto">Subject</label>
+								<label class="form-label" for="subject">Assunto</label>
 								<input type="text" class="form-control" id="subject" name="subject" placeholder="Assunto" tabindex="3">
 							</div>
 							<div class="form-group">
-								<label class="form-label" for="Mensagem">Message</label>
+								<label class="form-label" for="message">Messagem</label>
 								<textarea rows="5" cols="50" name="message" class="form-control" id="message" placeholder="Mensagem..." tabindex="4"
 								 required></textarea>
 							</div>
@@ -279,10 +279,10 @@
 	</section>
 	<!--contatinho -->
 	<footer>
-		<img src="face.png" alt="">
-		<img src="insta.png" alt="">
-		<img src="g+.png" alt="">
-		<img src="whats.png" alt="">
+		<img src="imgs/face.png" alt="">
+		<img src="imgs/insta.png" alt="">
+		<img src="imgs/g+.png" alt="">
+		<img src="imgs/whats.png" alt="">
 	</footer>
 	<!-- <a class="redes" href="www.facebook.com.br"><img src="face.png" alt=""></a>
 		<a class="redes" href="www.facebook.com.br"><img src="insta.png" alt=""></a>
