--- a/ong.html
+++ b/ong.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <link rel="stylesheet" href="css/ong.css">
-    <script src="ong.js" defer></script>
+    <script src="js/ong.js" defer></script>
     <title>Ong</title>
 </head>
 <body>
