--- a/empresa.html
+++ b/empresa.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href='https://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/empresa.css">
-    <script src="empresa.js" defer></script>
+    <script src="js/empresa.js" defer></script>
     <title>Document</title>
 </head>
 <body>
