--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<link rel="stylesheet" href="css/style.css">
 	<!-- <link rel="stylesheet/less" type="text/css" href="styles.less" /> -->
-	<script src="index.js" defer></script>
+	<script src="js/index.js" defer></script>
 
 
 	<title>We</title>
@@ -20,7 +20,7 @@
 <body>
 
 	<div class="opcoes">
-		<img id="hamburguer" src="hamburguer.png" alt="">
+		<img id="hamburguer" src="imgs/hamburguer.png" alt="">
 		<div id="barra">
 			<a onclick="none()" href="#section1" class="active"><span class="label">Home</span></a>
 			<a onclick="none()" href="#section2"><span class="label">Sobre</span></a>
@@ -179,14 +179,14 @@
 			</ol>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img class="d-block w-100" src="dogo-01.png" alt="First slide">
+					<img class="d-block w-100" src="imgs/dogo-01.png" alt="First slide">
 					<div class="carousel-caption d-none d-md-block">
 						<h1 class="carouseltitle">PETS</h1>
 						<p class="carousel">Ajude causas ligadas a Ongs de animais de estimação </p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="idosos-01.png" alt="Second slide">
+					<img class="d-block w-100" src="imgs/idosos-01.png" alt="Second slide">
 					<div class="carousel-caption d-none d-md-block">
 						<h1 class="carouseltitle">IDOSOS</h1>
 						<p class="carousel">Ajude causas ligadas a idosos</p>
@@ -194,14 +194,14 @@
 
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="kidsk-01.png" alt="Third slide">
+					<img class="d-block w-100" src="imgs/kidsk-01.png" alt="Third slide">
 					<div class="carousel-caption d-none d-md-block">
 						<h1 class="carouseltitle">CRIANÇAS</h1>
 						<p class="carousel">Ajude causas ligadas as crianças</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="florest-01.png" alt="Third slide">
+					<img class="d-block w-100" src="imgs/florest-01.png" alt="Third slide">
 					<div class="carousel-caption d-none d-md-block">
 						<h2 class="carouseltitle">NATUREZA</h2>
 						<p class="carousel">Ajude causas ligadas a natureza</p>
@@ -279,10 +279,10 @@
 	</section>
 	<!--contatinho -->
 	<footer>
-		<img src="face.png" alt="">
-		<img src="insta.png" alt="">
-		<img src="g+.png" alt="">
-		<img src="whats.png" alt="">
+		<img src="imgs/face.png" alt="">
+		<img src="imgs/insta.png" alt="">
+		<img src="imgs/g+.png" alt="">
+		<img src="imgs/whats.png" alt="">
 	</footer>
 	<!-- <a class="redes" href="www.facebook.com.br"><img src="face.png" alt=""></a>
 		<a class="redes" href="www.facebook.com.br"><img src="insta.png" alt=""></a>
