--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			</div>
 			<div class="itens">
 				<div class="item">
-					<img id="it" src="./ongs lolobig.png" alt="">
+					<img id="it" src="./imgs/ongs lolobig.png" alt="">
 				</div>
 			</div>
 
