ajustando página de cadastro

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="no-js">
+<html lang="pt-br" class="no-js">
 
 <head>
 	<meta charset="UTF-8">
@@ -47,7 +47,7 @@
 		<div class="content">
 			<h1 id="titulo-pag">Um clique pode ajudar milhares de causas urgentes<b></b></h1>
 			<a href="empresa.html" type="button" class="btn btn-primary btn-lg">Cadastro de empresas</a>
-			<a href="ong.html" type="button" class="btn btn-secondary btn-lg">Cadastro de Ongs</a>
+			<a href="ongs.html" type="button" class="btn btn-secondary btn-lg">Cadastro de Ongs</a>
 
 			<a href="#section2" class="cd-scroll-down cd-image-replace">scroll down</a>
 		</div>
