--- a/ongs.html
+++ b/ongs.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/empresa.css">
     <script src="js/empresa.js" defer></script>
-    <title>Empresa</title>
+    <title>Ong</title>
 </head>
 <body>
     <div class='wrapper'>
@@ -19,11 +19,11 @@
           </header>	
           <div class="inputs">
             <div class="field">
-              <label for="fname">Nome da empresa</label>
+              <label for="fname">Nome da ong</label>
               <input type="text" id="fname" class="input" />
             </div>
             <div class="field">
-              <label for="lname">Ramo</label>
+              <label for="lname">Causa que apoia</label>
               <input type="text" id="lname" class="input" />
             </div>
             <div class="field">
@@ -35,7 +35,7 @@
         </div>
         <div class="form-section" id="Form2">
           <header>
-            <p>Logo da empresa</p>
+            <p>Logo da ong</p>
           </header>	
           <div class="inputs center">
             <div class="field">
@@ -52,7 +52,7 @@
           </header>	
           <div class="inputs">
             <div class="field">
-              <label for="bio">Sobre a empresa<label>
+              <label for="bio">Sobre a ong<label>
               <textarea id="bio"  class="input" ></textarea>
             </div>
             <button class="prev">Voltar</button>
