criando os textos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div id="barra">
 			<a onclick="none()" href="#section1" class="active"><span class="label">Home</span></a>
 			<a onclick="none()" href="#section2"><span class="label">Sobre</span></a>
-			<a onclick="none()" href="#section3"><span class="label">Vantagens</span></a>
+			<a onclick="none()" href="#section3"><span class="label">Como funciona</span></a>
 			<a onclick="none()" href="#section4"><span class="label">Causas</span></a>
 			<a onclick="none()" href="#section5"><span class="label">Empresas</span></a>
 			<a onclick="none()" href="#section6"><span class="label">Contato</span></a>
@@ -34,7 +34,7 @@
 		<ul>
 			<li><a href="#section1" class="active"><span class="label">Home</span></a></li>
 			<li><a href="#section2"><span class="label">Sobre</span></a></li>
-			<li><a href="#section3"><span class="label">Vantagens</span></a></li>
+			<li><a href="#section3"><span class="label">Como funciona</span></a></li>
 			<li><a href="#section4"><span class="label">Causas</span></a></li>
 			<li><a href="#section5"><span class="label">Empresas</span></a></li>
 			<li><a href="#section6"><span class="label">Contato</span></a></li>
@@ -48,34 +48,34 @@
 		<div class="content">
 			<h1 id="titulo-pag">Um clique pode ajudar milhares de causas urgentes<b></b></h1>
 			<a href="empresa.html" type="button" class="btn btn-primary btn-lg">Cadastro de empresas</a>
-			<a href="ongs.html" type="button" class="btn btn-secondary btn-lg">Cadastro de Ongs</a>
+            <a href="ongs.html" type="button" class="btn btn-secondary btn-lg">Cadastro de Ongs</a>
+            
 
 		</div>
 	</section><!-- pesquisa ongs -->
 
 	<section id="section2" class="cd-section">
-		<div id="" class="content">
-			<h2>sobre</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum
-				perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id
-				cum.</p>
+		<div class="content">
+			<h2>Sobre</h2>
+			<p>O we é um projeto que visa facilitar ajuda a ongs e causas independentes. O objetivo do projeto é converter 
+				a publicidade online em ajuda para causas urgentes. 
+				Simples e pratico as empresas doam partes de seu lucro toda vez que uma pessoa compra um 
+				produto da marca por meio da publicidade online. Saiba quais empresas participam abaixo.</p>
 		</div>
 		<div class="content">
-			<h2>Como funciona</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum
-				perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id
-				cum.</p>
+			<h2>Vantagens</h2>
+			<p>Um processo simples e fácil tanto para empresas quanto para as Ongs. Ambas se cadastram no site, as 
+				empresas para ajudarem e as ongs para receberem as doações. A empresa só vai doar caso a compra seja efetuada pela publicidade online.
+			 </p>
 		</div>
 	</section><!-- Sobre -->
 
 	<section id="section3" class="cd-section">
 		<div id="sobre">
 			<div class="content">
-				<h2>Vantagens</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum
-					perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur,
-					id
-					cum.</p>
+				<h2>Como funciona</h2>
+				<p>A empresa que estiver disposta a ajudar se cadastra no site. Toda compra feita 
+						por meio do clique na publicidade online da empresa terá uma taxa revertida em caridade para as ongs. Varias causas podem ser impactadas com sua ajuda!</p>
 
 			</div>
 			<div class="itens">
