--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
 	<button class="cd-nav-trigger cd-image-replace">Abrir navegação<span aria-hidden="true"></span></button>
 
 	<section id="section1" class="cd-section">
-		<div class="content">
+		<div id="section-new" class="content">
 			<h1 id="titulo-pag">Um clique pode ajudar milhares de causas urgentes<b></b></h1>
-			<a href="empresa.html" type="button" class="btn btn-primary btn-lg">Cadastro de empresas</a>
-            <a href="ongs.html" type="button" class="btn btn-secondary btn-lg">Cadastro de Ongs</a>
+			<!-- <a href="empresa.html" type="button" class="btn btn-primary btn-lg">Cadastro de empresas</a>
+			<a href="ongs.html" type="button" class="btn btn-secondary btn-lg">Cadastro de Ongs</a> -->
+            <a id="new" href="ongs.html" class="btn btn-primary btn-outline">Cadastro de ongs</a>
+            <a id="new" href="empresa.html" class="btn btn-primary btn-outline">Cadastro de empresas</a>
             
 
 		</div>
