add scroll suave nas páginas

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 	</div>
 	<nav class="cd-vertical-nav">
 		<ul>
-			<li><a href="#section1" class="active"><span class="label">Home</span></a></li>
-			<li><a href="#section2"><span class="label">Sobre</span></a></li>
-			<li><a href="#section3"><span class="label">Como funciona</span></a></li>
-			<li><a href="#section4"><span class="label">Causas</span></a></li>
-			<li><a href="#section5"><span class="label">Empresas</span></a></li>
-			<li><a href="#section6"><span class="label">Contato</span></a></li>
+			<li><a class ="scrollsuave" href="#section1" class="active"><span class="label">Home</span></a></li>
+			<li><a class ="scrollsuave" href="#section2"><span class="label">Sobre</span></a></li>
+			<li><a class ="scrollsuave" href="#section3"><span class="label">Como funciona</span></a></li>
+			<li><a class ="scrollsuave" href="#section4"><span class="label">Causas</span></a></li>
+			<li><a class ="scrollsuave" href="#section5"><span class="label">Empresas</span></a></li>
+			<li><a class ="scrollsuave" href="#section6"><span class="label">Contato</span></a></li>
 			<li id="liLogin"><a href="login.html"><span id="login" class="label">Login</span></a></li>
 		</ul>
 	</nav><!-- menu vertical -->
